# pyharness

./: .gitignore  AGENTS.md  CHANGES.md  Makefile  README.md  SPEC.md  TASK_PLAN_PHASE4.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: deepagents-integration-analysis.md  mempalace-integration-design.md  persistence-plan.md  security-audit-phase1.md  strategic-analysis.md  technology-strategy-deepagents-mempalace.md  ux-review.md
docs/specs/: parallel-multi-agent.md
product-spec/ux/: design-tokens.md  user-flows.md  ux-principles.md  wireframe-descriptions.md
scenarios/: agent-loop.feature  agent-setup-error-handling.feature  bash-tool-security.feature  chat-input-dispatcher.feature  chat-persistence.feature  config-persistence.feature  connected-provider-model-filtering.feature  copy-chat-output.feature  live-model-discovery.feature  mcp-integration.feature  permission-system.feature  phase4-advanced-and-polish.feature  provider-status-population.feature  session-export-format.feature  session-system.feature  sidebar-agents-md-auto-load.feature  sidebar-cleanliness.feature  tui-agent-and-commands.feature  tui-interaction.feature
src/pyharness/: __init__.py  main.py  server.py
tests/: __init__.py  conftest.py  test_plugins.py
tests/acceptance/: __init__.py  phase2.feature  test_phase2_acceptance.py  test_phase3_acceptance.py  test_phase4_acceptance.py
tests/security/: test_bash_injection.py  test_path_traversal.py  test_permission_bypass.py
tests/test_config/: test_loader.py  test_persistence.py  test_schema.py
tests/test_core/: test_active_sessions.py  test_agent.py  test_agent_manager.py  test_checkpoint_restore.py  test_concurrent_agents.py  test_logging.py  test_provider.py  test_session.py  test_session_export.py  test_session_graph_registry.py  test_session_migration.py  test_system_prompt.py  test_testing.py
tests/test_memory/: test_memory_store.py
tests/test_middleware/: test_git_undo.py  test_permission.py
tests/test_tools/: test_builtin.py  test_memory_tools.py  test_registry.py
tests/test_tui/: test_activity_indicator.py  test_agent_runner.py  test_app.py  test_autocomplete_scroll.py  (+22 more)
(+50 files in other folders)
