[project]
name = "pyharness"
version = "0.1.0"
description = "The terminal coding agent that remembers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "pyharness contributors" },
]
keywords = ["tui", "llm", "coding-agent", "cli", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "textual>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openrouter>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0",
    "watchfiles>=1.0.0",
    "structlog>=24.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "json5>=0.15.0",
]

[project.optional-dependencies]
mempalace = ["mempalace>=0.1.0"]

[project.scripts]
pyharness = "pyharness.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyharness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "slow: Tests that take >5s",
    "tui: TUI/Textual tests",
    "integration: Integration tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/pyharness"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-textual-snapshot>=1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "hypothesis>=6.156.6",
]
